assets/css/style.css
/*-----------------------Typefaces-----*/

body {
    font-family: le-monde-livre-classic-byol, serif;
    font-weight: 300;
    font-style: normal;
	font-variant-numeric: oldstyle-nums;
    font-feature-settings: "onum";
    margin-left: 20px;
    margin-right: 20px; 
    font-size: 0.9em;
}

h1, h2, h3, h4, h5, h6 {
    font-family: fieldwork, sans-serif;
    font-weight: 300;
    font-style: normal;
	font-variant-numeric: oldstyle-nums;
    font-feature-settings: "onum";
    color: #872657;
}
/*-----------------------NavBar-----*/

.navbar {
    font-family: le-monde-livre-classic-byol, serif;
    font-weight: 300;
    font-style: normal;
	font-variant-numeric: oldstyle-nums;
    font-feature-settings: "onum";
}

.navbar-brand {
    font-family: le-monde-livre-classic-byol, serif;
    font-weight: 300;
    font-style: normal;
	font-variant-numeric: oldstyle-nums;
    font-feature-settings: "onum";
    color: #872657;
}

.nav-link {
    color: #872657; 
    text-transform: uppercase;
    font-size: 0.9em;
    
}

.nav-item {
    text-align: center; 
}

.nav-item-info {
    width: 33%;
}

nav .fas {
    font-size: 30pt;
}
.bg-info {
    border-radius: 15px;
    text-align: center;
    padding: 5px; 
}
 
.text-right {
    text-align: right;
}


/*------------Colours---------*/

.fa-heart {
    color: red;
}



/*-----------Sections---------*/
#covid-19 {
    background-color: yellow;
}

.covid-19-item {
    background-color: yellow;
    color: black;
}

.covid-19-banner {
    background-color: yellow;
    margin-top: 10px; 
    font-family: fieldwork, sans-serif;
    font-weight: 600;
    text-align: center;
    padding: 5px 10px 5px 10px;
    border-radius: 15px;  

}

.covid-19-banner a {
    background-color: black;
    color: yellow;
    padding: 0px 5px 0px 5px;
    border-radius: 5px; 
}

.contact {
    background-color: #872657;
    color: white;
    text-align: center;
    padding: 5px 10px 5px 10px;
    margin-bottom: 20px; 
    border-radius: 15px; 
    text-transform: uppercase;
     
}

.contact h4 {
    color: white;
}

.recommendation p {
    font-family: fieldwork, sans-serif;
    font-weight: 300;
    font-style: normal;
}

.recommendation-submit {
    background-color: white;
    color: #872657;
    font-family: fieldwork, sans-serif;
    font-weight: 300;
    font-style: normal;
    text-transform: uppercase;
}

.uppercase {
    text-transform: uppercase;
}

.about {
    
    padding-left: 10px;
}


.information {
    background-color: whitesmoke;
    padding-left: 20px;
}

.bd-callout {
    padding: 1.25rem;
    margin-top: 1.25rem;
    margin-bottom: 1.25rem;
    border: 1px solid #e9ecef;
    border-left-width: .25rem;
    border-radius: .25rem;
}

.bd-callout-info {
    border-left-color: #5bc0de;
}

.banking {
    background-color: #ffc0cb;
}

#banking {
    padding-left: 20px;
}

.food {
    background-color: #DAFBD0;
}

#food {
    padding-top: 20px;
}

.fuel {
    background-color: burlywood;
}

#fuel {
    padding-top: 20px; 
}

.leisure {
    background-color: #b3db2d;
}

#leisure {
    padding-top: 20px;
}

.pharmacy {
    background-color: rgba(255, 166, 0, 0.808);
}

#pharmacy {
    padding-top: 20px;
}


.church {
    background-color: #f8de7e;
}

#church {
    padding-top: 20px;
}

footer {
    background-color: #872658;
    color: whitesmoke;
    padding-left: 10px;
    padding-top: 10px; 
}

footer h5 {
    color: whitesmoke;
}

footer .nav-link {
    color: whitesmoke;
}

footer .fab {
    color: whitesmoke;
}

/*-----------Images---------*/

.t-shirt {
    background-image: url(../img/t-shirt-mockup-featuring-a-bearded-man-with-sunglasses-posing-in-front-of-some-plants-2248-el1.png);
    background-color: seashell;
    background-position: center;
    background-repeat: no-repeat;
    min-height: 75vh;
    
}

.Portarlington1 {
    background-image: url(../img/SpaStreetBridge.jpeg);
    background-color: seashell;
    background-position: center center; 
    background-repeat: no-repeat;
    min-height: 40vh;
    max-height: 60vh;
}

